[FIX] FAQ Title spacing

--- a/pages/faq/faq.module.scss
+++ b/pages/faq/faq.module.scss
@@ -8,6 +8,7 @@
     h1 {
         font-size: 2rem;
         margin-bottom: 1rem;
+        margin-top: 3rem;
         text-align: center;
     }
 }
